# worker

./: .gitignore  INSTALL  Makefile.in  README.md  aclocal.m4  build.sh  configure  configure.ac  mkdocs.yml
TestWorker/: .gitignore  compute-pi.c  fail.sh  pi-nonuma.pbs  r.sh  run_sum.sh  script.r  sum.c  sum.pbs  tbss.generate
TestWorker/Hello/: data2.csv  hello.pbs
TestWorker/Reductor/: .gitignore  README.md  counter.py  data_generator.py  pickle_diff.py  pickle_empty.py
TestWorker/data/: file-21.3-1.21.txt  sleeptime.txt  sum.txt
conf/: Makefile.am  Makefile.in  worker.conf  worker.conf.tmpl  worker_perl.sh
doc/: Makefile.am  Makefile.in  index.html  worker.pptx
docs/: changes.md  commands.md  contact.md  efficiency.md  further_info.md  index.md  mapreduce.md  monitoring.md  multithreading.md  postprocessing.md  resume.md  steps.md  time_limits.md  trouble.md  usage.md
examples/: README.md
examples/bash_example/: README.md  alpha.csv  alphabet.pbs  alphabet.sh  alphabet.slurm  worker_alphabet.sh
examples/exec_example/: Makefile  README.md  vec2.csv  vec2.pbs  vec2.slurm  vectors_omp.cpp  worker-vertors.sh
examples/job_array_example/: README.md  power.sh  run-array.pbs  run-array.slurm  (+1 more)
misc/: .gitignore  derivation.ipynb  nr_nodes.py  nr_work_items.py  worker_helper.py
src/: Makefile.am  Makefile.in  master.c  master.h  slave.c  slave.h  worker.c  worker.h
tests/: .gitignore  batch.sh  echo.sh  echo_all.sh  epilog.sh  hello_array_id.pbs  multicore.pbs  pi-numa.pbs  pi.c  pi.pbs  prolog.sh  starvation.pbs  submit.sh  timedrun-batch.sh
(+88 files in other folders)
